# cs50

./: .nvim.env  readme.md
cs50p/: pyproject.toml
cs50p/lecture-00-functions-variables/00.lecture/: hello.py
cs50p/lecture-00-functions-variables/01.indoor/: indoor.py
cs50p/lecture-00-functions-variables/02.playback/: playback.py
cs50p/lecture-00-functions-variables/03.faces/: faces.py
cs50p/lecture-00-functions-variables/04.einstein/: einstein.py
cs50p/lecture-00-functions-variables/05.tip/: tip.py
cs50p/lecture-01-conditionals/00.lecture/: compare.py
cs50p/lecture-01-conditionals/01.deep-thought/: deep.py
cs50p/lecture-01-conditionals/02.home-federal-savings-bank/: bank.py
cs50p/lecture-01-conditionals/03.file-extensions/: extensions.py
cs50p/lecture-01-conditionals/04.math-interpreter/: interpreter.py
cs50p/lecture-01-conditionals/05.meal-time/: meal.py
cs50p/lecture-02-loops/00.lecture/: cat.py  mario.py
cs50p/lecture-02-loops/01.camel-case/: camel.py
cs50p/lecture-02-loops/02.coke-machine/: coke.py
cs50p/lecture-02-loops/03.twttr/: twttr.py
cs50p/lecture-02-loops/04.vanity-plates/: plates.py
cs50p/lecture-02-loops/05.nutrition-facts/: nutrition.py
cs50p/lecture-03-exceptions/01.fuel-gauge/: fuel.py
cs50p/lecture-03-exceptions/02.taqueria/: taqueria.py
cs50p/lecture-03-exceptions/03.grocery-list/: grocery.py
cs50p/lecture-03-exceptions/04.outdated/: outdated.py
cs50p/lecture-04-libraries/00.lecture/: generate.py  itunes.py  name.py  say.py
cs50p/lecture-04-libraries/01.emojize/: emojize.py
(+48 files in other folders)
