[project]
name = "cs50p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cowsay>=6.1",
    "emoji>=2.15.0",
    "inflect>=7.5.0",
    "pyfiglet>=1.0.4",
    "requests>=2.33.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
