[project]
name = "cs50p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cowsay>=6.1",
    "emoji>=2.15.0",
    "fpdf>=1.7.2",
    "inflect>=7.5.0",
    "mypy>=1.20.0",
    "pillow>=12.2.0",
    "pyfiglet>=1.0.4",
    "pytest>=9.0.3",
    "pyttsx3>=2.99",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
    "validators>=0.35.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
